<resources>
    <string name="app_name">Companion App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login_background">login_background</string>
    <string name="Eastland">Eastland</string>
    <string name="email">Email</string>
    <string name="title_activity_key">KeyActivity</string>
    <string name="Taken">Taken</string>
    <string name="Returned">Returned</string>
    <string name="Take_Key">Take Key</string>
    <string name="remember_me">Remember me</string>
    <string name="return_key">Return Key</string>
    <string name="no_keys_to_be_displayed">No keys to be displayed.</string>
    <string name="Pin">Pin</string>
    <string name="Inactivated">Inactivated</string>
</resources>
