<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="example.tanprasit.com.companion_app.LoginActivity">

    <TextView
        android:layout_above="@+id/login_username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/textview_margin"
        android:gravity="center"
        android:text="@string/Eastland"
        android:textColor="@color/primary_text_default_material_dark"
        android:textSize="@dimen/text_very_large_size" />

    <EditText
        android:id="@+id/login_username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_password_field"
        android:layout_marginBottom="@dimen/navigation_padding_top_default"
        android:background="@drawable/border"
        android:hint="@string/Username"
        android:inputType="text"
        android:padding="@dimen/textview_padding"
        android:textColor="@color/primary_text_default_material_dark"
        android:textColorHint="@color/primary_text_default_material_dark"
        android:textSize="@dimen/text_large_size" />

    <EditText
        android:id="@+id/login_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/navigation_padding_top_default"
        android:background="@drawable/border"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="@dimen/textview_padding"
        android:textColor="@color/primary_text_default_material_dark"
        android:textColorHint="@color/primary_text_default_material_dark"
        android:textSize="@dimen/text_large_size" />

    <Button
        android:id="@+id/login_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_field"
        android:background="@color/material_deep_teal_500"
        android:padding="@dimen/textview_padding"
        android:text="@string/sign_in"
        android:textColor="@color/primary_text_default_material_dark"
        android:textSize="@dimen/text_large_size" />

</RelativeLayout>
